--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,10 @@ webruntime==0.5.6
 Werkzeug==0.15.4
 uvloop
 httptools
+itsdangerous == 1.1.0
+jinja2 == 2.10.1
+MarkupSafe == 1.1.1
+numpy >= 1.9.2
+scikit-learn >= 0.18
+matplotlib >= 1.4.3
+pandas >= 0.19
