--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ rope==0.14.0
 six==1.12.0
 SQLAlchemy==1.3.5
 sqlparse==0.3.0
+pickle
 tortoise==0.1.1
 typing-extensions==3.7.4.3
 unicodecsv==0.14.1
