--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,15 @@
+twilio==7.3.0
+Flask == 1.1.1
+gunicorn == 19.9.0
 itsdangerous == 1.1.0
 jinja2 == 2.10.1
 MarkupSafe == 1.1.1
+Werkzeug == 0.15.5
+requests==2.22.0
+SQLAlchemy==1.3.24
+pandas >= 0.19
 numpy >= 1.9.2
 scipy >= 0.15.1
 scikit-learn >= 0.18
 matplotlib >= 1.4.3
-pandas >= 0.19
-bcrypt==3.1.7
-cryptography==2.7
-databases==0.4.3
-fastapi==0.63.0
-Flask==1.1.1
-Flask-Bcrypt==0.7.1
-Flask-Blogging==1.2.2
-Flask-Caching==1.9.0
-Flask-Compress==1.5.0
-Flask-FileUpload==0.5.0
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-SQLAlchemy==2.4.3
-Flask-WTF==0.14.3
-gunicorn==20.0.4
-joblib==0.13.2
-json5==0.8.4
-jsonrpc==1.2
-jsonschema==3.0.1
-mccabe==0.6.1
-passlib==1.7.4
-ply==3.11
-prettytable==0.7.2
-progressbar==2.5
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-property-cached==1.6.4
-protobuf==3.10.0
-pscript==0.7.1
-psutil==5.6.3
-pycrypto==2.6.1
-pycurl==7.43.0.3
-pydantic==1.8.1
-PyJWT==1.7.1
-pylint==2.3.1
-python-dateutil==2.8.0
-python-jose==3.3.0
-python-multipart==0.0.5
-requests==2.22.0
-requests-oauthlib==1.2.0
-retrying==1.3.3
-rope==0.14.0
-six==1.12.0
-SQLAlchemy==1.3.5
-sqlparse==0.3.0
-tortoise==0.1.1
-typing-extensions==3.7.4.3
-unicodecsv==0.14.1
-urllib3==1.24.2
-uvicorn==0.13.4
-wcwidth==0.1.7
-webencodings==0.5.1
-webruntime==0.5.6
-Werkzeug==0.15.4
-uvloop
-httptools
+scikit-image==0.18.3
