--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ numpy >= 1.9.2
 scipy >= 0.15.1
 scikit-learn >= 0.18
 matplotlib >= 1.4.3
+scikit-image==0.18.3
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+keras-vis==0.4.1
