--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 flake8==3.8.4
-Flask==1.1.2
+Flask==1.1.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -33,4 +33,5 @@ six==1.15.0
 toml==0.10.2
 twilio==6.53.0
 urllib3==1.26.3
+starlette==0.13.6
 Werkzeug==1.0.1
